--- a/py_src/requirements.txt
+++ b/py_src/requirements.txt
@@ -7,3 +7,8 @@ Pillow==7.2.0
 pyparsing==2.4.7
 python-dateutil==2.8.1
 six==1.15.0
+mypy==0.782
+mypy-extensions==0.4.3
+hypothesis==5.26.1
+flake8==3.7.7
+pytest==6.0.1
