--- a/setup.cfg
+++ b/setup.cfg
@@ -12,3 +12,6 @@ ignore_missing_imports = True
 [mypy-sub_module]
 follow_imports = "normal"
 ignore_missing_imports = True
+
+[tool:pytest]
+junit_family=legacy
