--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ script:
     - pytest --junitxml=../test/test.xml ../test
     - export MYPYPATH='./stubs'
     - mypy ../py_src
-    - export CODECOV_TOKEN="b3233ad7-de29-4752-b9cb-5dfcd0d9718c"
+after_success:
     - bash <(curl -s https://codecov.io/bash)
 
 notifications:
