--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,9 @@ script:
     - export MYPYPATH='./stubs'
     - mypy ../py_src
 after_success:
-    - bash <(curl -s https://codecov.io/bash)
+    - cd ..
+    - export CODECOV_TOKEN="b3233ad7-de29-4752-b9cb-5dfcd0d9718c"
+    - bash <(curl -s https://codecov.io/bash) -f test/test.xml
 
 notifications:
     email: false
