sixth try codecov

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ script:
 after_success:
     - cd ..
     - export CODECOV_TOKEN="b3233ad7-de29-4752-b9cb-5dfcd0d9718c"
-    - bash <(curl -s https://codecov.io/bash) -f test/test.xml
+    - bash <(curl -s https://codecov.io/bash) -f test/test.xml -F py_src
 
 notifications:
     email: false
