--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,14 @@ install:
     - pip3 install -r requirements.txt
     - pip3 install ..
 script:
-    - pytest --junitxml=../test/test.xml ../test
+    - pytest --junitxml=../test.xml ../test
     - export MYPYPATH='./stubs'
     - mypy ../py_src
 after_success:
     - cd ..
     - export CODECOV_TOKEN="b3233ad7-de29-4752-b9cb-5dfcd0d9718c"
-    - bash <(curl -s https://codecov.io/bash) -f test/test.xml -F py_src
+    - bash <(curl -s https://codecov.io/bash) -f ./test.xml -F py_src
+    - bash <(curl -s https://codecov.io/bash) -f ./test.xml -F .
 
 notifications:
     email: false
