--- a/.codecov.yml
+++ b/.codecov.yml
@@ -8,5 +8,5 @@ coverage:
 
 comment:
     require_changes: no
-    require_base: no
-    require_head: no
+    # require_base: no
+    # require_head: no
