--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ script:
 after_success:
     - cd ..
     - export CODECOV_TOKEN="b3233ad7-de29-4752-b9cb-5dfcd0d9718c"
-    - python3 -m install pytest-cov
+    - python3 -m pip install pytest-cov
     - py.test --cov-report=xml --cov=py_src/ test/
     - bash <(curl -s https://codecov.io/bash)
 
