--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,8 @@ script:
 after_success:
     - export CODECOV_TOKEN="b3233ad7-de29-4752-b9cb-5dfcd0d9718c"
     - python3 -m pip install pytest-cov
-    - py.test --cov-report=xml --cov=. ../test
+    - cd ../test
+    - py.test --cov-report=xml --cov
     - bash <(curl -s https://codecov.io/bash)
 
 notifications:
