--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ after_success:
     - export CODECOV_TOKEN="b3233ad7-de29-4752-b9cb-5dfcd0d9718c"
     - python3 -m pip install pytest-cov
     - cd ../test
-    - py.test --cov-report=xml --cov=../py_src .
+    - py.test --cov-report=xml --cov=../
     - bash <(curl -s https://codecov.io/bash)
 
 notifications:
