--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,10 @@ script:
     - export MYPYPATH='./stubs'
     - mypy ../py_src
 after_success:
+    - cd ..
     - export CODECOV_TOKEN="b3233ad7-de29-4752-b9cb-5dfcd0d9718c"
-    - python3 -m pip install pytest-cov
-    - cd ../test
-    - py.test --cov-report=xml --cov=../py_src
-    - bash <(curl -s https://codecov.io/bash)
+    - coverage run test/*.py
+    - codecov
 
 notifications:
     email: false
