travis.yml: pip install -e ..

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
     - cd py_src
 install:
     - pip3 install -r requirements.txt
-    - pip3 install ..
+    - pip3 install -e ..
 script:
     - export MYPYPATH='./stubs'
     - mypy ../py_src
@@ -15,7 +15,8 @@ after_success:
     - export CODECOV_TOKEN="b3233ad7-de29-4752-b9cb-5dfcd0d9718c"
     - python3 -m pip install pytest-cov
     - cd ../test
-    - py.test --cov-config=.coveragerc --cov=../py_src
+    # uncomment to see output from test coverage check:
+    # - py.test --cov-config=.coveragerc --cov=../py_src
     - py.test --cov-config=.coveragerc --cov-report=xml --cov=../py_src
     - bash <(curl -s https://codecov.io/bash)
 
