add docstring coverage checks in automated build

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,11 @@ install:
 script:
     - export MYPYPATH='./stubs'
     - mypy ../py_src
+    - flake8 ../py_src
+    - docstr-coverage -m -f -F 80.0 ../py_src
 after_success:
-    - python3 -m pip install pytest-cov
     - cd ../test
-    - py.test --cov-config=.coveragerc --cov-report=xml --cov=../py_src
+    - pytest --cov-config=.coveragerc --cov-report=xml --cov=../py_src
     - bash <(curl -s https://codecov.io/bash)
 
 notifications:
