--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,8 @@ after_success:
     - bash <(curl -s https://codecov.io/bash)
     - cd ..
     - python3 -c "import module1; import module2; import module3; import sub_module.module4; import extension1; print('success')"
+    - python3 -m sub_module
+    - test_pack_test
 
 notifications:
     email: false
