--- a/py_src/requirements.txt
+++ b/py_src/requirements.txt
@@ -2,10 +2,12 @@ certifi==2020.6.20
 cycler==0.10.0
 kiwisolver==1.2.0
 matplotlib==3.3.1
+numba==0.51.2
 numpy==1.19.1
 Pillow==7.2.0
 pyparsing==2.4.7
 python-dateutil==2.8.1
+scipy==1.5.2
 six==1.15.0
 mypy==0.782
 mypy-extensions==0.4.3
