--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,13 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-# C extensions
+# C extensions, remove *.c if writing custom c code not automatically generated
 *.so
+*.c
+
+# pipenv generated files
+Pipfile
+Pipfile.lock
 
 # Distribution / packaging
 .Python
