add Cython linking of external C libraries (hello.c, module3.py)

--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,10 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-# C extensions, remove *.c if writing custom c code not automatically generated
+# C extensions, include *.c if all C code is automatically generated (Cython, Numba)
 *.so
-*.c
 
-# pipenv generated files
+# pipenv generated files, might want these sometimes (Pipfile at least?)
 Pipfile
 Pipfile.lock
 
@@ -88,13 +87,6 @@ ipython_config.py
 
 # pyenv
 .python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow
 __pypackages__/
